samples/_failures_safe/1761392545_613b0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d77424bf.c: In function ‘main’:
./samples/SAFE/__tmp_d77424bf.c:184:14: error: ‘hand’ undeclared (first use in this function); did you mean ‘rand’?
  184 |         if (!hand
      |              ^~~~
      |              rand
./samples/SAFE/__tmp_d77424bf.c:184:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d77424bf.c:184:18: error: expected ‘)’ at end of input
  184 |         if (!hand
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_d77424bf.c:184:9: error: expected declaration or statement at end of input
  184 |         if (!hand
      |         ^~
./samples/SAFE/__tmp_d77424bf.c:184:9: error: expected declaration or statement at end of input
